create github pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="cid-s7L2ieq1xP" id="image1-2">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-s7L2ieq1xP" id="image1-2">
 
     
 
@@ -104,7 +104,7 @@
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong><em>&nbsp; &nbsp;$35 </em></strong>&nbsp;<span class="cost"><strong>$80</strong></span></p>
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://mobirise.co" class="btn btn-black display-4"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>GARANTIR VAGA</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a href="https://pay.hotmart.com/F39922485G" class="btn btn-black display-4" target="_blank"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>GARANTIR VAGA</a></div>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                         </p>
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://mobirise.co" class="btn btn-black display-4"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>GARANTA SUA VAGA</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a href="https://pay.hotmart.com/F39922485G" class="btn btn-black display-4" target="_blank"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>GARANTA SUA VAGA</a></div>
                 </div>
             </div>
         </div>
